<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/sl_home"
        android:title="@string/home" />

    <item
        android:id="@+id/all_messages_fragment"
        android:icon="@drawable/sl_chat"
        android:title="@string/chats" />

    <item
        android:id="@+id/imagePickerFragment"
        android:icon="@drawable/sl_create_post"
        android:title="@string/create_post" />

    <item
        android:id="@+id/people_fragment"
        android:icon="@drawable/sl_people"
        android:title="@string/people" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/sl_account"
        android:title="@string/profile" />
</menu>