<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.connection.ui.login.LoginPresenter" />

        <variable
            name="model"
            type="com.connection.vo.login.LoginUiModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/view"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_people"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceCornerSizeFifty"
            tools:src="@drawable/ic_people" />

        <TextView
            android:id="@+id/image_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic_slab_regular"
            android:text="@string/connection"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="@dimen/radius_medium"
            app:boxCornerRadiusBottomStart="@dimen/radius_medium"
            app:boxCornerRadiusTopEnd="@dimen/radius_medium"
            app:boxCornerRadiusTopStart="@dimen/radius_medium"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={model.email}"
                app:inputError="@{model.emailError}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="@dimen/radius_medium"
            app:boxCornerRadiusBottomStart="@dimen/radius_medium"
            app:boxCornerRadiusTopEnd="@dimen/radius_medium"
            app:boxCornerRadiusTopStart="@dimen/radius_medium"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={model.password}"
                app:inputError="@{model.passwordError}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:elevation="@dimen/button_elevation"
            android:onClick="@{() -> presenter.onLoginClick()}"
            android:text="@string/login"
            android:textStyle="bold"
            app:cornerRadius="@dimen/radius_medium"
            app:visibleGone="@{!model.loading}" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password"
            app:visibleGone="@{model.loading}" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_pre_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account_yet_sign_up"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_tiny"
                android:background="?android:attr/selectableItemBackground"
                android:elevation="@dimen/button_elevation"
                android:onClick="@{() -> presenter.onRegisterClick()}"
                android:text="@string/sign_up"
                android:textColor="@color/navy"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>