<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.connection.ui.base.search.BaseSearchPresenter" />

        <variable
            name="model"
            type="com.connection.vo.search.SearchUiModel" />

        <import type="com.connection.R" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_regular"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/sp_edit_text"
                android:drawableStart="@drawable/ic_search_outlined"
                android:drawablePadding="@dimen/padding_medium"
                android:padding="@dimen/padding_small"
                android:textColor="@color/black"
                android:hint="@string/find_people"
                app:layout_constraintTop_toBottomOf="@+id/text_feed"
                app:textChanges="@{(flow) -> presenter.onSearchChanged(flow)}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            tools:listitem="@layout/list_item_search" />

        <ImageView
            android:id="@+id/image_empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_woman_searching"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            app:visibleGone="@{model.emptySearchResultState}" />

        <TextView
            android:id="@+id/text_empty_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center_horizontal"
            android:text="@string/no_connections"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_empty_state"
            app:visibleGone="@{model.emptySearchResultState}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>