<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.connection.ui.userprofile.UserProfilePresenter" />

        <variable
            name="model"
            type="com.connection.vo.userprofile.UserProfileUiModel" />

        <import type="com.connection.R" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> presenter.onBackClick()}"
                android:src="@drawable/ic_back_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_profile_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:ellipsize="end"
                android:fontFamily="@font/core_sans_regular"
                android:maxLines="1"
                android:text="@string/user_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/text_xx_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/image_back"
                app:layout_constraintStart_toEndOf="@+id/image_back"
                app:layout_constraintTop_toTopOf="@+id/image_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:elevation="4dp"
                    app:defaultGlideRes="@{R.drawable.ic_profile_picture}"
                    app:glideRes="@{model.profilePicture}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceCornerSizeFifty"
                    tools:src="@drawable/ic_profile_picture" />

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:fontFamily="@font/core_sans_regular"
                    android:text="@{model.username}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xx_medium"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/image_profile"
                    app:layout_constraintStart_toStartOf="@+id/image_profile"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile"
                    tools:text="Alexander Marinov" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_additional_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:padding="@dimen/padding_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_username">

                    <TextView
                        android:id="@+id/text_connections_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@{model.connectionsCount}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_x_medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="7.5K" />

                    <TextView
                        android:id="@+id/text_connections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/connections"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/text_connections_count"
                        app:layout_constraintStart_toStartOf="@+id/text_connections_count"
                        app:layout_constraintTop_toBottomOf="@+id/text_connections_count" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="@color/dark_grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_posts_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@{model.postsCount}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_x_medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/view"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="7.5K" />

                    <TextView
                        android:id="@+id/text_posts_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/text_posts_count"
                        app:layout_constraintStart_toStartOf="@+id/text_posts_count"
                        app:layout_constraintTop_toBottomOf="@+id/text_posts_count" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/container_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/container_additional_information">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_connect"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/connect"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_message"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/message"
                        app:visibleGone="@{model.messageVisible}"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_accept"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/accept"
                        app:visibleGone="@{model.acceptDeclineVisible}"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_decline"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/decline"
                        app:visibleGone="@{model.acceptDeclineVisible}"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_invite_sent"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/invite_sent"
                        app:visibleGone="@{model.inviteSendVisible}"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/text_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:fontFamily="@font/core_sans_regular"
                    android:text="@string/posts"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_x_medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_buttons" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_small"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_posts"
                    app:spanCount="3"
                    tools:listitem="@layout/list_item_post_image" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_posts"
                    app:visibleGone="@{model.emptyPostsState}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/text_medium"
                        android:fontFamily="@font/core_sans_regular"
                        android:text="@string/no_posts" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:src="@drawable/ic_share_link" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>